hello-world/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello2
spec:
  selector:
    app: hello2
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
